--- a/src/Resources/translations/validators.en.yaml
+++ b/src/Resources/translations/validators.en.yaml
@@ -1,3 +1,8 @@
 madcoders_rma:
     validator:
         return_qty_less_or_equal: 'You cannot return more than {{ compared_value }}.'
+        order_number:
+            not_blank: 'To pole nie moze być puste'
+        bank_account_number:
+            not_blank: 'To pole nie moze być puste'
+            not_a_valid: 'This is not a valid International Bank Account Number (IBAN).'
