Add pdf generator to "Return Form"

--- a/src/Resources/translations/messages.en.yaml
+++ b/src/Resources/translations/messages.en.yaml
@@ -4,12 +4,13 @@ madcoders_rma:
         order_number: 'Podaj numer zamówienia'
         return_number: 'Order return number'
         return:
+            enter_order_number: 'Please enter your order number'
             create_return_form: 'Create return form'
             order_number_not_valid: 'No order that meets the criteria'
             code_not_valid: 'code_not_valid'
             enter_code_you_received: 'Enter the code you received'
             verife_your_form: 'Verife your form'
-            return_form: 'Forma zwrotu'
+            return_form: 'RETOURENSCHEIN / MUSTER-WIDERRUFSFORMULAR'
             consent_text: 'Akceptuje warunki zwrotu'
             selecte_items_to_return_form: 'Wybierz producty do zwrotu'
             provide_reason: 'Provide the reason for the return'
@@ -19,3 +20,7 @@ madcoders_rma:
             created_an_order_return: 'You have successfully created an order return. '
             created_an_order_return_instruction: 'Print the return form and put it in the package with the returned products. We also sent the form to the email address provided'
             print_order_return_form: 'Print order return form'
+            return_items_list: 'ZURÜCK GESENDETE(R) ARTIKEL'
+            customer_information: 'PERSONAL INFORMATION'
+            return_sending_address: 'Please send your return to'
+            signatured_place: 'signature place'
