--- a/src/Resources/translations/validators.en.yaml
+++ b/src/Resources/translations/validators.en.yaml
@@ -2,9 +2,9 @@ madcoders_rma:
     validator:
         return_qty_less_or_equal: 'You cannot return more than {{ compared_value }}.'
         order_number:
-            not_blank: 'To pole nie moze być puste'
+            not_blank: 'Please provide valid order number'
         bank_account_number:
-            not_blank: 'To pole nie moze być puste'
+            not_blank: 'Please enter bank account number'
             not_a_valid: 'This is not a valid International Bank Account Number (IBAN).'
         notes:
-            not_blank: 'To pole nie moze być puste'
+            not_blank: 'This field cannot be empty'
