--- a/src/Resources/translations/messages.en.yaml
+++ b/src/Resources/translations/messages.en.yaml
@@ -24,6 +24,8 @@ madcoders_rma:
         qty: 'QTY'
         headline: 'Return form'
         continue_button: 'Continue'
+        change_button: 'Change'
+        change_channel_button: 'Change Channel'
         session_not_valid: 'Your session has expired'
 
         return_reason: 'Reason of return'
@@ -76,6 +78,14 @@ madcoders_rma:
     admin:
         configuration:
             select_channel: 'Select Channel'
+            change_return_addresss_to_channel: 'Change address to channel'
+
+            form:
+
+                error:
+                    channel_not_exist: 'Channel not exist'
+                    form_not_save: 'Form not save'
+
         reasons:
 
             form:
