--- a/src/Resources/translations/messages.en.yaml
+++ b/src/Resources/translations/messages.en.yaml
@@ -47,7 +47,7 @@ madcoders_rma:
             error:
                 order_number_not_valid: 'Order number #%orderNumber% is not valid'
                 order_not_fullfiled_yet: 'Order #%orderNumber% is not fulfilled yet. Please contact customer support'
-
+                order_already_returned: 'Order #%orderNumber% has already been returned'
         verification_step:
             secondary_headline: 'Verification step'
             enter_verification_code: "Check your e-mail and enter verification code"
