--- a/src/Resources/translations/messages.en.yaml
+++ b/src/Resources/translations/messages.en.yaml
@@ -128,6 +128,7 @@ madcoders_rma:
                 position: 'Position'
                 slug: 'Slug'
                 description: 'Description'
+                require: 'Require'
 
     pdf:
         return_to_address: "Return to"
